--- a/property.html
+++ b/property.html
@@ -12,7 +12,7 @@
 <div class="tab"> 
   <a href="home_page.html"><button>Home</button> </a>
   <a href="property.html"><button class="tablinks" onclick="openTab(event, 'Property')">Property</button> </a>
-  <a href="client.html"><button>Client</button> </a>
+  <a href="client.php"><button>Client</button> </a>
   <a href="type.html"><button>Type</button> </a>   
 </div>
 
