hid footer and fixed some stuff

--- a/backend/showPropertyCode.html
+++ b/backend/showPropertyCode.html
@@ -68,8 +68,8 @@ echo "</table>";
     </div>
 
 
-    <!-- FOOTER -->
-    <div class="footer">
+   <!-- FOOTER --> 
+   <div class="footer" style="visibility:hidden;">
         <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
         <button class="tablinks" onclick="openTab(event, 'Property')">Property</button>
         <button class="tablinks" onclick="openTab(event, 'Client')">Client</button>
@@ -176,7 +176,7 @@ $result = mysqli_query($conn,"SELECT * FROM client");
     </body>
 
     <!-- FOOTER -->
-    <div class="footer">
+    <div class="footer" style="visibility:hidden;">
         <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
         <button class="tablinks" onclick="openTab(event, 'Property')">Property</button>
         <button class="tablinks" onclick="openTab(event, 'Client')">Client</button>
