--- a/backend/showClientCode.html
+++ b/backend/showClientCode.html
@@ -1,3 +1,291 @@
 <xmp>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../styles/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <?php
+    if(!empty($_COOKIE["loggedin"])) {
+        echo $_COOKIE["loggedin"];
+    }
+    else {
+        header("location:../frontend/login.php");
 
+    }
+    ?>
+
+    </head>
+    <body>
+
+    <h2>Ruthless Real Estate</h2>
+
+    <?php include_once('../backend/menu.php'); ?>
+
+    <?php
+        include("../backend/connection.php");
+        //use the variable names in the include file
+        $conn = new mysqli($host, $username, $password, $database);
+        // Check connection
+        if (mysqli_connect_errno())
+        {
+        echo "Failed to connect to MySQL: " . mysqli_connect_error();
+        }
+
+        $result = mysqli_query($conn,"SELECT * FROM client");
+
+        echo "<table border='1'>
+    <tr>
+        <th>Given Name</th>
+        <th>First Name</th>
+        <th>Street</th>
+        <th>State</th>
+        <th>Suburb</th>
+        <th>Postcode</th>
+        <th>Email</th>
+        <th>Mobile</th>
+        <th>Mailing List</th>
+    </tr>";
+
+    while($row = mysqli_fetch_array($result))
+    {
+    ?>
+    <form method="post" Action="../backend/modifyClient.php">
+        <tr id=<?php echo $row['client_id'] ?> > <?php
+            echo "<td>" ?> <input type=text name=gname value='<?php echo $row['client_gname'] ?>'> <?php "</td>";
+        echo "<td>" ?> <input type=text name=fname value='<?php echo $row['client_fname'] ?>'> <?php "</td>";
+        echo "<td>" ?> <input type=text name=street value='<?php echo $row['client_street'] ?>'> <?php "</td>";
+        echo "<td>" ?>
+        <select name="state">
+            <option value="NSW"<?php if ($row['client_state'] == 'NSW') echo ' selected="selected"'; ?>>NSW</option>
+            <option value="NT"<?php if ($row['client_state'] == 'NT') echo ' selected="selected"'; ?>>NT</option>
+            <option value="QLD"<?php if ($row['client_state'] == 'QLD') echo ' selected="selected"'; ?>>QLD</option>
+            <option value="SA"<?php if ($row['client_state'] == 'SA') echo ' selected="selected"'; ?>>SA</option>
+            <option value="TAS"<?php if ($row['client_state'] == 'TAS') echo ' selected="selected"'; ?>>TAS</option>
+            <option value="VIC"<?php if ($row['client_state'] == 'VIC') echo ' selected="selected"'; ?>>VIC</option>
+            <option value="WA"<?php if ($row['client_state'] == 'WA') echo ' selected="selected"'; ?>>WA</option>
+        </select> <?php
+                "</td>";
+        echo "<td>" ?> <input type=text name=suburb value=<?php echo $row['client_suburb'] ?>> <?php "</td>";
+        echo "<td>" ?> <input type=text name=pc value=<?php echo $row['client_pc'] ?> style="max-width:40px;"> <?php "</td>";
+        echo "<td>" ?> <input type=text name=email value=<?php echo $row['client_email'] ?>> <?php "</td>";
+        echo "<td>" ?> <input type=text name=mobile value=<?php echo $row['client_mobile'] ?>> <?php "</td>";
+        echo "<td>" ?> <input type=text name=mailinglist value=<?php echo $row['client_mailinglist'] ?>> <?php "</td>";
+        echo "<td>" ?> <input type=submit value=SAVE name=update> <?php "</td>";
+        echo "<td>" ?> <input type=submit value=DELETE name=delete> <?php "</td>";
+        echo "</tr>"; ?>
+    </form>
+    <?php
+        }
+        echo "</table>";
+
+    mysqli_close($conn);
+
+    ?>
+
+    <p>
+        <a href="../backend/showClientCode.html" target="_blank">
+            <img src="../code_images/client.JPG" >
+        </a>
+    </p>
+
+    </body>
+    </html>
+</xmp>
+<xmp>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../styles/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <?php
+    if(!empty($_COOKIE["loggedin"])) {
+        echo $_COOKIE["loggedin"];
+    }
+    else {
+        header("location:../frontend/login.php");
+
+    }
+    ?>
+    </head>
+    <body>
+
+    <h2>Ruthless Real Estate</h2>
+
+    <?php include_once('../backend/menu.php'); ?>
+
+    <div id="Home" class="tabcontent">
+        <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
+        <h2>Add New Client</h2>
+
+
+
+        <form method="post" Action="../backend/modifyClient.php">
+            <table
+            <td  echo "</tr><?php
+            echo "<td style='width: 100px'>" ?> Given name* <?php "</td>";
+            echo "<td style='width: 50px'>" ?> <input type="text" name="gname"> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> First name* <?php "</td>";
+            echo "<td>" ?> <input type="text" name="fname"> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> Street* <?php "</td>";
+            echo "<td>" ?> <input type="text" name="street"> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> Suburb* <?php "</td>";
+            echo "<td>" ?> <input type="text" name="suburb"> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> State* <?php "</td>";
+            echo "<td>" ?> <select name="state">
+            <option value="NSW">NSW</option>
+            <option value="NT">NT</option>
+            <option value="QLD">QLD</option>
+            <option value="SA">SA</option>
+            <option value="TAS">TAS</option>
+            <option value="VIC" selected="selected">VIC</option>
+            <option value="WA">WA</option>
+        </select> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> Postcode* <?php "</td>";
+            echo "<td>" ?> <input type="number" name="pc"> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> Email* <?php "</td>";
+            echo "<td>" ?> <input type="text" name="email"> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> Mobile* <?php "</td>";
+            echo "<td>" ?> <input type="number" name="mobile"> <?php "</td>";
+            echo "</tr>"; ?><?php
+            echo "<td>" ?> Mailing List* <?php "</td>";
+            echo "<td>" ?> <select name="mailinglist">
+            <option value="Y">Y</option>
+            <option value="N" selected="selected">N</option>
+        </select> <?php "</td>";
+            echo "</tr>"; ?><?php
+        echo "<td>" ?> <?php "</td>";
+            echo "<td>" ?> <input type=submit value="Create Client!" name=add> <?php "</td>";
+            echo "</tr>"; ?>
+
+
+            </table>
+        </form>
+
+    </div>
+
+    <?php
+include("connection.php");
+//use the variable names in the include file
+$conn = new mysqli($host, $username, $password, $database);
+// Check connection
+if (mysqli_connect_errno())
+{
+    echo "Failed to connect to MySQL: " . mysqli_connect_error();
+}
+
+$result = mysqli_query($conn,"SELECT * FROM client");
+
+
+?>
+    </body>
+
+    <!-- FOOTER -->
+    <div class="footer">
+        <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
+        <button class="tablinks" onclick="openTab(event, 'Property')">Property</button>
+        <button class="tablinks" onclick="openTab(event, 'Client')">Client</button>
+        <button class="tablinks" onclick="openTab(event, 'Type')">Type</button>
+    </div>
+
+
+    <script>
+        function openTab(evt, tabName) {
+            var i, tabcontent, tablinks;
+            tabcontent = document.getElementsByClassName("tabcontent");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+            document.getElementById(tabName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
+
+        // Get the element with id="defaultOpen" and click on it
+        document.getElementById("defaultOpen").click();
+    </script>
+
+    </html>
+</xmp>
+<xmp>
+    <html>
+    <head>
+        <title>Modify and View Clients</title>
+    </head>
+    <body>
+    <?php
+include("connection.php");
+//use the variable names in the include file
+$conn = new mysqli($host, $username, $password, $database);
+?>
+
+    <?php
+
+if (isset($_POST['delete'])) {
+    $query="DELETE FROM client WHERE client_id LIKE $_POST[id]";
+
+    if (mysqli_query($conn, $query)) {
+        echo ("<script LANGUAGE='JavaScript'>
+    window.alert('Client deleted');
+    window.location.href='../frontend/client.php';
+    </script>");
+
+    } else {
+        echo "Error deleting record: " . mysqli_error($conn);
+    }
+
+    } else if (isset($_POST['update'])) {
+
+        $query=" UPDATE client SET client_gname = '$_POST[gname]', client_fname = '$_POST[fname]'
+            , client_street = '$_POST[street]', client_state = '$_POST[state]', client_suburb = '$_POST[suburb]'
+            , client_pc = '$_POST[pc]', client_email = '$_POST[email]'
+            , client_mobile = '$_POST[mobile]', client_mailinglist = '$_POST[mailinglist]'
+        WHERE client_id LIKE $_POST[id];";
+
+        if (mysqli_query($conn, $query)) {
+            echo ("<script LANGUAGE='JavaScript'>
+            window.alert('Client updated');
+            window.location.href='../frontend/client.php';
+    </script>");
+
+    } else {
+    echo "Error updating record: " . mysqli_error($conn);
+    }
+
+    } else if (isset($_POST['add'])) {
+
+    if(empty($_POST['gname']) || empty($_POST['gname']) || empty($_POST['street']) || empty($_POST['suburb']) || empty($_POST['state']) || empty($_POST['pc']) || empty($_POST['mobile'])  ){
+    echo ("<script LANGUAGE='JavaScript'>
+        window.alert('Please insert data where fields have *');
+        window.location.href='../backend/addClient.php';
+    </script>");
+    return;
+    }
+
+    $query=" INSERT INTO client (client_gname, client_fname, client_street, client_state, client_suburb, client_pc, client_email, client_mobile, client_mailinglist)
+    VALUES ('$_POST[gname]', '$_POST[fname]', '$_POST[street]', '$_POST[state]', '$_POST[suburb]', '$_POST[pc]', '$_POST[email]', '$_POST[mobile]', '$_POST[mailinglist]');";
+
+    if (mysqli_query($conn, $query)) {
+    echo ("<script LANGUAGE='JavaScript'>
+        window.alert('Client added');
+        window.location.href='../frontend/client.php';
+    </script>");
+    } else {
+    echo "Error Creating Client: " . mysqli_error($conn);
+    }
+    }
+
+    ?>
+
+    </body>
+    </html>
 </xmp>
