--- a/backend/showFeatureCode.html
+++ b/backend/showFeatureCode.html
@@ -1,4 +1,230 @@
 <xmp>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../styles/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <?php
+    if(!empty($_COOKIE["loggedin"])) {
+        echo $_COOKIE["loggedin"];
+    }
+    else {
+        header("location:login.php");
+
+    }
+    ?>
+    </head>
+    <body>
+
+    <h2>Ruthless Real Estate</h2>
+
+    <?php include_once('../backend/menu.php'); ?>
 
 
+    <?php
+
+        include("../backend/connection.php");
+        //use the variable names in the include file
+        $conn = new mysqli($host, $username, $password, $database);
+        // Check connection
+        if (mysqli_connect_errno())
+        {
+        echo "Failed to connect to MySQL: " . mysqli_connect_error();
+        }
+
+        $result = mysqli_query($conn,"SELECT * FROM feature");
+
+        echo "<table border='1'>
+    <tr>
+        <th>Feature</th>
+    </tr>";
+
+    while($row = mysqli_fetch_array($result))
+    {
+    ?>
+    <form method="post" Action="../backend/modifyFeature.php">
+        <tr id=<?php echo $row['feature_id'] ?> > <?php
+            echo "<td>" ?> <input type=text name=name value="<?php echo $row['feature_name'] ?>"> <?php "</td>";
+        echo "<td>" ?> <input type=submit value=SAVE name=update> <?php "</td>";
+        echo "<td>" ?> <input type=submit value=DELETE name=delete> <?php "</td>";
+        echo "<td>" ?> <input type=hidden name=id value=<?php echo $row['feature_id'] ?>> <?php "</td>";
+        echo "</tr>"; ?>
+    </form>
+    <?php
+        }
+        echo "</table>";
+
+    mysqli_close($conn);
+
+    ?>
+
+    <p>
+        <a href="../backend/showFeatureCode.html" target="_blank">
+            <img src="../code_images/feature.JPG" >
+        </a>
+    </p>
+
+
+    </body>
+
+    </html>
+
+</xmp>
+<xmp>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../styles/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    </head>
+    <body>
+
+    <h2>Ruthless Real Estate</h2>
+
+    <?php include_once('../backend/menu.php'); ?>
+
+    <div id="Home" class="tabcontent">
+        <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
+        <h2>Add New Feature</h2>
+
+
+        <form method="post" Action="../backend/modifyFeature.php">
+            <table
+            <td  echo "</tr><?php
+        echo "<td style='width: 50px'>" ?> Feature name* <?php "</td>";
+            echo "<td style='width: 100px'>" ?> <input type="text" name="name"> <?php "</td>";
+            echo "</tr>"; ?><?php
+        echo "<td>" ?> <?php "</td>";
+            echo "<td>" ?> <input type=submit value="Create Feature" name=add> <?php "</td>";
+            echo "</tr>"; ?>
+
+
+            </table>
+        </form>
+
+    </div>
+
+    <?php
+include("connection.php");
+//use the variable names in the include file
+$conn = new mysqli($host, $username, $password, $database);
+// Check connection
+if (mysqli_connect_errno())
+{
+    echo "Failed to connect to MySQL: " . mysqli_connect_error();
+}
+
+$result = mysqli_query($conn,"SELECT * FROM feature");
+
+
+
+?>
+    </body>
+
+    <!-- FOOTER -->
+    <div class="footer">
+        <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
+        <button class="tablinks" onclick="openTab(event, 'Property')">Property</button>
+        <button class="tablinks" onclick="openTab(event, 'Client')">Client</button>
+        <button class="tablinks" onclick="openTab(event, 'Type')">Type</button>
+    </div>
+
+
+    <script>
+        function openTab(evt, tabName) {
+            var i, tabcontent, tablinks;
+            tabcontent = document.getElementsByClassName("tabcontent");
+            for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+            }
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+            document.getElementById(tabName).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
+
+        // Get the element with id="defaultOpen" and click on it
+        document.getElementById("defaultOpen").click();
+    </script>
+
+    </html>
+</xmp>
+<xmp>
+    <html>
+    <head>
+        <title>Modify and View feature</title>
+    </head>
+    <body>
+    <?php
+include("connection.php");
+//use the variable names in the include file
+$conn = new mysqli($host, $username, $password, $database);
+?>
+
+    <?php
+
+if (isset($_POST['delete'])) {
+    $query="DELETE FROM feature WHERE feature_id LIKE $_POST[id]";
+
+    if (mysqli_query($conn, $query)) {
+          echo ("<script LANGUAGE='JavaScript'>
+    window.alert('feature deleted');
+    window.location.href='../frontend/feature.php';
+    </script>");
+
+
+    } else {
+        echo "Error deleting record: " . mysqli_error($conn);
+    }
+
+    } else if (isset($_POST['update'])) {
+
+        $query=" UPDATE feature SET feature_name = '$_POST[name]'
+        WHERE feature_id LIKE $_POST[id];";
+
+        if (mysqli_query($conn, $query)) {
+            echo ("<script LANGUAGE='JavaScript'>
+            window.alert('feature updated');
+            window.location.href='../frontend/feature.php';
+    </script>");
+
+
+    } else {
+    echo "Error updating record: " . mysqli_error($conn);
+    }
+
+    } else if (isset($_POST['add'])) {
+
+    if(empty($_POST['name'])){
+    echo ("<script LANGUAGE='JavaScript'>
+        window.alert('Please insert a feature');
+        window.location.href='../backend/addfeature.php';
+    </script>");
+    }
+    else{
+
+    $query=" INSERT INTO feature (feature_name)
+    VALUES ('$_POST[name]');";
+
+
+
+    if (mysqli_query($conn, $query)) {
+    echo ("<script LANGUAGE='JavaScript'>
+        window.alert('feature added');
+        window.location.href='../frontend/feature.php';
+    </script>");
+    } else {
+    echo "Error Creating feature: " . mysqli_error($conn);
+    }
+    }
+    }
+
+    ?>
+
+    </body>
+    </html>
 </xmp>
